--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 branches:
   except:
     - gh-pages
-language: perl
-perl:
-  - "5.20"
+language: c
+#perl:
+#  - "5.20"
 before_install:
   - git clone https://github.com/szabgab/perl6-travis-ci.git
 script:
