--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ language: c
 #perl:
 #  - "5.20"
 before_install:
-  - git clone https://github.com/szabgab/perl6-travis-ci.git
+  - git clone https://github.com/szabgab/perl6-travis-ci.git ..
 script:
-  - pwd
-  - cat .travis.yml
-  - perl6-travis-ci/rakudo.sh
-  - perl -v
-  - prove --version
+  - ../perl6-travis-ci/rakudo.sh
