split installation and test running

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ language: c
 #  - "5.20"
 before_install:
   - git clone https://github.com/szabgab/perl6-travis-ci.git ../perl6-travis-ci
+  - ../perl6-travis-ci/install_rakudo.sh
 script:
-  - ../perl6-travis-ci/rakudo.sh
+  - ../perl6-travis-ci/run_tests.sh
