--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 branches:
   except:
     - gh-pages
-language: c
-#perl:
-#  - "5.20"
-before_install:
-  - git clone https://github.com/szabgab/perl6-travis-ci.git ../perl6-travis-ci
-  - ../perl6-travis-ci/install_rakudo.sh
-script:
-  - ../perl6-travis-ci/run_tests.sh
+language: perl6
+perl6:
+  - latest
+  - 2015.07
+#install:
+#  - rakudobrew build-panda
+#  - panda install URI Template::Mojo HTTP::Easy Template::Mustache
