--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language: perl6
 perl6:
   - latest
   - 2015.07
-#install:
-#  - rakudobrew build-panda
+install:
+  - rakudobrew build-panda
+  - panda install Template::Mojo
 #  - panda install URI Template::Mojo HTTP::Easy Template::Mustache
