--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ perl6:
   - 2015.07
 install:
   - rakudobrew build-panda
-  - panda install Template::Mojo
+  #- panda install Template::Mojo
+  - panda intsall HTTP::Easy
 #  - panda install URI Template::Mojo HTTP::Easy Template::Mustache
