--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,4 @@ perl6:
 #  - 2015.09
 install:
   - rakudobrew build-panda
-  - panda install Template::Mojo
-  - panda intsall HTTP::Easy
-  - panda install JSON::Tiny
-#  - panda install URI Template::Mojo HTTP::Easy Template::Mustache
+  - panda installdeps .
